unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Used_Planet_s_Technical_SupportR__c.field-meta.xml
<CustomField>
    <fullName>Used_Planet_s_Technical_SupportR__c</fullName>
    <formula>VALUE(TEXT( Used_Planet_s_Technical_Support__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used Planet&#39;s Technical Support?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>