unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Usefullness_of_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Usefullness_of_Collateral__c</fullName>
    <inlineHelpText>How would you rate usefulness of Collateral to Support Tax Free (leaflets, how to guides, instore signage etc)? 5 is very useful and 1 not useful at all.</inlineHelpText>
    <label>Usefullness of Collateral?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>