unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Usefullness_of_CollateralR__c.field-meta.xml
<CustomField>
    <fullName>Usefullness_of_CollateralR__c</fullName>
    <formula>VALUE(TEXT( Usefullness_of_Collateral__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usefullness of Collateral?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>