unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Utilise_Planet_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Utilise_Planet_Intelligence__c</fullName>
    <inlineHelpText>Do you currently utilize Planet Intelligence and Planet Data to influence your strategy? 5 mean full utilisation, 1 means not used at all.</inlineHelpText>
    <label>Utilise Planet Intelligence?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>