unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/Utilise_Planet_IntelligenceR__c.field-meta.xml
<CustomField>
    <fullName>Utilise_Planet_IntelligenceR__c</fullName>
    <formula>VALUE(TEXT(Utilise_Planet_Intelligence__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilise Planet Intelligence?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>