unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/What_Are_The_Gaps_Friction_Points__c.field-meta.xml
<CustomField>
    <fullName>What_Are_The_Gaps_Friction_Points__c</fullName>
    <label>What Are The Gaps/Friction Points?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>