unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/What_Friction_Points_are_There__c.field-meta.xml
<CustomField>
    <fullName>What_Friction_Points_are_There__c</fullName>
    <inlineHelpText>What friction points are there (physical placement, size/format of leaftelts, etc.)?</inlineHelpText>
    <label>What Friction Points are There?</label>
    <type>TextArea</type>
</CustomField>