unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/What_Gaps_are_There__c.field-meta.xml
<CustomField>
    <fullName>What_Gaps_are_There__c</fullName>
    <label>What Gaps are There?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>