unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/What_Gaps_in_the_Information__c.field-meta.xml
<CustomField>
    <fullName>What_Gaps_in_the_Information__c</fullName>
    <label>What Gaps in the Information?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>