unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/What_Other_Reports_and_Why__c.field-meta.xml
<CustomField>
    <fullName>What_Other_Reports_and_Why__c</fullName>
    <label>What Other Reports and Why?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>