unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/What_Signage_is_Used__c.field-meta.xml
<CustomField>
    <fullName>What_Signage_is_Used__c</fullName>
    <label>What Signage is Used?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stickers</fullName>
            </value>
            <value>
                <fullName>Plexis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>