unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/What_Was_Your_Experience__c.field-meta.xml
<CustomField>
    <fullName>What_Was_Your_Experience__c</fullName>
    <inlineHelpText>5 means excellent or no experience, 1 means terrible experience.</inlineHelpText>
    <label>What Was Your Experience?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>