unpackaged/main/default/objects/Merchant_Diagnostic__c/fields/What_Was_Your_ExperienceR__c.field-meta.xml
<CustomField>
    <fullName>What_Was_Your_ExperienceR__c</fullName>
    <formula>VALUE(TEXT( What_Was_Your_Experience__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What Was Your Experience?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>