unpackaged/main/default/objects/Merchant_Diagnostic__c/recordTypes/Diagnostic_Preparation.recordType-meta.xml
<RecordType>
    <fullName>Diagnostic_Preparation</fullName>
    <active>true</active>
    <label>Diagnostic Preparation</label>
</RecordType>