unpackaged/main/default/objects/Merchant_Diagnostic__c/recordTypes/Head_Office_Experience.recordType-meta.xml
<RecordType>
    <fullName>Head_Office_Experience</fullName>
    <active>true</active>
    <label>Head Office Experience</label>
</RecordType>