unpackaged/main/default/objects/Merchant_Diagnostic__c/recordTypes/Shop_Management_Experience.recordType-meta.xml
<RecordType>
    <fullName>Shop_Management_Experience</fullName>
    <active>true</active>
    <label>Shop Management Experience</label>
</RecordType>