unpackaged/main/default/objects/Merchant_Diagnostic__c/recordTypes/Shop_Staff_Experience.recordType-meta.xml
<RecordType>
    <fullName>Shop_Staff_Experience</fullName>
    <active>true</active>
    <label>Shop Staff Experience</label>
</RecordType>